Fix improve visibility that courseware accordion modal when smart phone size. #1167

--- a/lms/static/css/gacco-course.css
+++ b/lms/static/css/gacco-course.css
@@ -105,15 +105,22 @@ div.course-wrapper > a[href="#course-accordion-modal"] {
   white-space: nowrap;
 }
 
+div.course-wrapper > a[href="#course-accordion-modal"]:hover {
+  background-color: #1f1f1f;
+}
+
 div.course-wrapper > a[href="#course-accordion-modal"] span {
   font-weight: bold;
   color: #fff;
 }
 
-div.course-wrapper > a[href="#course-accordion-modal"] .toc {
-  border-right: 2px solid #fff;
-  margin-right: 10px;
-  padding-right: 10px;
+div.course-wrapper > a[href="#course-accordion-modal"] span:nth-child(2) {
+  float: right;
+  font-size: 0.8125em;
+}
+
+div.course-wrapper > a[href="#course-accordion-modal"] span i {
+  padding-left: 10px;
 }
 
 .xmodule_display.xmodule_SequenceModule nav.sequence-bottom ul li.prev a:focus,
